# LLM-A-B-Testing-Platform

./: .env.example  .env.production.example  .gitignore  ARC_EASY_COMPLETE_TEST_REPORT.md  COMPLETE_TRAINING_SET_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DUAL_MODEL_INTERIM_ANALYSIS.md  DUAL_MODEL_TEST_PROGRESS.md  Dockerfile.api  Dockerfile.dashboard  FINAL_VALIDATION_REPORT.md  FUNCTIONAL_REQUIREMENTS_SUMMARY.md  IMPLEMENTATION_SUMMARY_PHASE2.md  LLM_AS_JUDGE_TEST_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_EN.md  REALISTIC_ASSESSMENT.md  REAL_API_TEST_SUMMARY.md  SECURITY_MONITORING_IMPLEMENTATION.md  TESTING_IMPLEMENTATION_SUMMARY.md  alembic.ini  bandit_report.json  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  integration_test_report.txt  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
configs/: nginx.conf  prometheus.yml
configs/grafana/dashboards/: llm-ab-testing.json
configs/grafana/datasources/: prometheus.yml
docs/: AGENT_READY_SUMMARY.md  AGENT_SPECIFICATIONS.md  AGENT_WORKFLOW.md  API_Documentation.md  ARCHITECTURE.md  CI_CD_TROUBLESHOOTING.md  CONFIGURATION_MANAGEMENT.md  DEVELOPMENT_SETUP.md  DOMAIN_SPECIFICATIONS.md  MONITORING_OPERATIONS.md  PERFORMANCE_OPTIMIZATION.md  SECURITY_OPERATIONS.md  TESTING.md  TESTING_STRATEGY.md  VIBE_CODING_SPECS.md  VIBE_EXECUTION_PLAN.md
scripts/: agent_spawner.py  check_dataset_sizes.py  deploy.sh  download_datasets.py  download_small_datasets.py  generate_api_docs.py  init-db.sql  merge_arc_easy_results.py  performance_indexes.sql  run_comprehensive_real_test.py  test-alembic.py  test-runner.py  validate-setup.py  validate_implementation.py
src/application/: __init__.py
src/application/dto/: __init__.py  analysis_request_dto.py  consensus_result_dto.py  evaluation_request_dto.py  model_request_dto.py  (+4 more)
src/infrastructure/: __init__.py
tests/: conftest.py  factories.py
tests/e2e/: test_api_integration.py  test_complete_test_workflow.py
tests/functional/: README.md  test_complete_arc_easy_dataset.py  test_complete_dataset_evaluation.py  test_complete_dataset_quick.py  test_complete_training_set.py  test_dual_model_training_set.py  test_final_functional.py  test_functional_requirements.py  test_minimal_functional.py  test_multi_model_comparison.py  test_real_api_integration.py  test_real_dataset_evaluation.py  test_real_multi_model_comparison.py
tests/integration/: conftest.py  run_integration_tests.py  test_api_documentation.py  test_api_integration.py  test_database_integration.py  test_security_integration.py
tests/integration_manual/: README.md  test_integration_simple.py  test_security_integration.py  test_security_simple.py
tests/performance/: test_benchmark_validation.py  test_load_testing.py  test_performance_benchmarks.py
tests/performance_manual/: README.md  enhanced_metrics_collector.py  performance_optimization_config.yaml  performance_test_optimizer.py  test_cost_controlled_evaluation.py  test_infrastructure_enhancement.py  test_large_scale_evaluation.py  test_llm_as_judge.py
tests/utils/: test_quality_validator.py
(+240 files in other folders)
